--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/style.css">
   
   <title>Frontend Mentor | Order summary card</title>
 
@@ -15,8 +16,34 @@
   </style>
 </head>
 <body>
+  <div class="card-container">
+    <div class="image-container">
+     <!-- <img src="images/illustration-hero.svg" alt="illustration">-->
+    </div>
 
-  Order Summary
+    <div class="title-container">
+      <h1 class="title">Order Summary</h1>
+      <h3 class="subtitle">You can now listen to millions of songs,<br> 
+        audiobooks, and podcasts on any device<br> 
+         anywhere you like!</h3>
+    </div>
+
+    <div class="price-card">
+      <img src="images/icon-music.svg" alt="music">
+      <span class="price-card-text">
+        <h3 class='card-title'>Annual Plan</h3>
+        <h3 class="card-price">$59.99/year</h3>
+      </span>
+      <a href="#">Change</a>
+    </div>
+
+    <div class="button-container">
+      <button class="primary-button">Proceed to Payment</button>
+      <span class="secondary-button">Cancel Order</span>
+    </div>
+  </div>
+
+  <!--Order Summary
 
   You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
@@ -27,11 +54,11 @@
   Change
 
   Proceed to Payment
-  Cancel Order
+  Cancel Order-->
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/ElianaNeto">Eliana Neto</a>.
   </div>
 </body>
 </html>
