--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="price-card">
       <img src="images/icon-music.svg" alt="music">
       <span class="price-card-text">
-        <h3 class='card-title'>Annual Plan</h3>
+        <h3 class="card-title">Annual Plan</h3>
         <h3 class="card-price">$59.99/year</h3>
       </span>
       <a href="#">Change</a>
@@ -39,9 +39,9 @@
     </div>
   </div>
   
-  <div class="attribution">
+  <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/ElianaNeto">Eliana Neto</a>.
-  </div>
+  </div>-->
 </body>
 </html>
